@@ -12,6 +12,7 @@ Bug fixes:
 - PR#5806: ensure that backtrace tests are always run (testsuite)
 - PR#5810: error in switch printing when using -dclambda
 - PR#5819: segfault when using [with] on large recursive record (ocamlopt)
+- PR#5858: Assert failure during typing of class
 
 OCaml 4.00.1:
 -------------
